:bug fix(date-picker): adjust z-index for popper

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -106,10 +106,6 @@
 }
 
 @layer components {
-  .react-datepicker-popper {
-    z-index: 20;
-  }
-
   :focus-visible {
     outline: none;
   }
